	  - removed support for interactively prompting the user for a value: input flag, prompt, read() method
	  - removed indirection (redirection) support
	  - removed support for storing expressions

	recordScalar() methods (cSimpleModule, cStatistic):
	- added optional "const char *unit" argument
	- moved to cComponent!
	- see also: **.save-as-scalar = true

	cPar implementation changed

	cPar, etc:
	- setFromText() -> parse()
	- getAsText() -> toString()
	- also cDisplayString: getString() -> toString() (old getString() deprecated)
	NOTE: inconsistency with INET Framework: IPAddress, IPv6Address, MACAddress: str()

	- cBag class removed

	- global connect() function removed (use cGate::connectTo() instead!)

	- global findXXX(const char *name) functions turned into static cXXX::find(const char *name);
	   - findLink()
	   - findFunction
	   - findEnum
	   - findChannelType
	   - findNetworkType()
	   - findModuleType()
	    findModuleType() left for compatibility

	- cModuleType::buildInside(mod) became protected (was deprecated anyway)

	- cModule: deprecated methods phase(), setPhase() removed

	- removed writeContents() altogether

	- snapshot file became XML

	- deprecated cSubmodIterator -- use cModule::SubmoduleIterator instead! cModule::ChannelIterator also added

	- cSimpleModule::end() -- removed, as there was little value in it. To terminate
	  an activity() module, simply return from the activity() method, or call the new
	  halt() method to end the module while preserving the local variables for inspection.

	- added cSimpleModule::halt()

	- cSimpleModule::deleteModule() -- in handleMessage()-based modules, this no longer
	  throws exception. That is, execution will continue normally after the deleteModule() call.

	- removed cSimpleModule::moduleState()

	- covariant return types for dup(). This might cause incompatibility with customized message
	  classes (.msg file with customize=true). The hand-coded class still contains cPolymorphic*